# flask-oidc-client-poc

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  compose.yml  main.py  pyproject.toml  wsgi.py
.github/workflows/: release-please.yml
conf/: nginx.conf
oidc_client/: __init__.py  config.py  logout.py
oidc_client/helpers/: is_authenticated_session.py  session_handler.py  setup_logging.py
oidc_client/templates/: index.html
tests/: config_test.py  logging_test.py  logout_test.py  test___init__.py
