[tool.poetry]
name = "oidc-client"
version = "0.5.0"
description = ""
authors = ["christian <eland.christian@gmail.com>"]
packages = [{include = "oidc_client"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
authlib = "^1.3.0"
requests = "^2.31.0"
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core>=1.7.1"]
build-backend = "poetry.core.masonry.api"
